--- a/app.json
+++ b/app.json
@@ -10,22 +10,22 @@
     ],
     "env": {
         "BOT_TOKEN": {
-            "description": "Your Bot token from @Botfather"
+            "description": "Your Bot token from @Botfather",
             "required": true,
             "value": ""
         },
         "API_ID": {
-            "description": "Your API_ID from https://my.telegram.org/apps"
+            "description": "Your API_ID from https://my.telegram.org/apps",
             "required": true,
             "value": ""
         },
         "API_HASH": {
-            "description": "Your API_HASH from https://my.telegram.org/apps"
+            "description": "Your API_HASH from https://my.telegram.org/apps",
             "required": true,
             "value": ""
         },
         "CHANNEL_ID": {
-            "description": "Add @szrosebot as admin your channel and get id."
+            "description": "Add @szrosebot as admin your channel and get id.",
             "required": true,
             "value": ""
         }
